# locale-settings

./: Cargo.toml  README.md
src/: codeset.rs  currency.rs  lib.rs  locale.rs  messages.rs  numeric.rs  time.rs
src/ffi/: mod.rs  utils.rs
