[package]
name = "locale-settings"
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "A higher-level interface to locale settings accessed via the POSIX C API."
documentation = "https://docs.rs/crate/locale_settings"
repository = "https://github.com/johnstonskj/locale_settings.git"
readme = "README.md"
license = "MIT"
keywords = ["locale", "POSIX"]
categories = ["internationalization", "localization", "api-bindings", "os", "value-formatting"]

[dependencies]
lazy_static = "1.3.0"
log = "0.4"
regex = "1"
locale-types = "0.4"

[dev-dependencies]
locale-codes = "0.3"
